# tokemon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_CN.md
locales/: en.yml  zh-CN.yml
scripts/: statusline.sh
src/: alert.rs  app.rs  collector.rs  config.rs  main.rs  model.rs  pricing.rs  setup.rs
src/provider/: claude_code.rs  code_buddy.rs  mod.rs
src/ui/: alert_bar.rs  detail_panel.rs  header.rs  help.rs  history.rs  layout.rs  mod.rs  overview.rs  session_list.rs  session_tab.rs  shared.rs  theme.rs  trend_chart.rs
